
# $Id: Makefile.am,v 1.25 2004/04/17 15:12:36 alor Exp $

include $(top_srcdir)/Makefile.am.common

SUBDIRS =   arp_cop \
            chk_poison \
            dns_spoof \
            dos_attack \
            dummy \
            find_conn \
            find_ettercap \
            find_ip \
            finger \
            finger_submit \
            gre_relay \
            gw_discover \
            link_type \
            pptp_chapms1 \
            pptp_clear \
            pptp_pap \
            pptp_reneg \
            rand_flood \
            remote_browser \
            reply_arp \
            scan_poisoner \
            search_promisc \
            smb_clear \
            smb_down \
            stp_mangler 

# vim:ts=4:noexpandtab
