
# $Id: Makefile.am,v 1.1 2003/11/05 10:10:05 lordnaga Exp $

include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = ec_chk_poison.la

ec_chk_poison_la_CFLAGS = @EC_CFLAGS@

ec_chk_poison_la_SOURCES = chk_poison.c

ec_chk_poison_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_chk_poison_la_LIBS = 

# vim:ts=4:noexpandtab

